@@ -1,3 +1,7 @@
+2009-03-29  Moritz  <moritz@gnu.org>
+
+	* poldi.texi (XScreensaver): New section.
+
 2009-02-16  Moritz  <moritz@gnu.org>
 
 	* poldi.texi (Configuration): Documentation bug fix: the option is
